Update and Build pdf

--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -118,7 +118,7 @@
 %%% Photo
 \begin{figure}
 	\hfill
-	\includegraphics[width=0.2\textwidth]{photo}
+	\includegraphics[width=0.2\textwidth]{photo2}
 	\vspace{-7cm}
 \end{figure}
 
@@ -134,9 +134,9 @@
 
 \PersonalEntry{Nacimiento}{6 de Enero de 1977}
 \PersonalEntry{Localización}{Santiago de Chile}
-\PersonalEntry{Teléfono}{(000) 000-0000}
+\PersonalEntry{Teléfono}{(56) 979513358}
 \PersonalEntry{Mail}{\url{dario.palminio@gmail.com}}
-\PersonalEntry{Sitio web}{\url{https://www.palminio.com}}
+\PersonalEntry{Sitio web}{\url{https://www.linkedin.com/in/palminio}}
 \PersonalEntry{linkedin}{\url{https://www.linkedin.com/in/palminio}}
 \PersonalEntry{CScrumMaster}{\url{https://www.scrumalliance.org/community/profile/dpalminio}}
 
@@ -144,7 +144,7 @@
 %%% ------------------------------------------------------------
 \NewPart{Sumario}{}
 
-Soy un Ingeniero de Sistemas trabajando como Scrum Master Sr. y Team Facilitator. Las aptitudes con las que me desenvuelvo con dicho rol son: liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento. 
+Soy un Ingeniero de Sistemas y agilista con perfil de Agile Coach, Scrum Master Sr. y Team Facilitator. Las aptitudes con las que me desenvuelvo con dicho rol son: liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento. 
 Me gusta desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal y en hacer que las cosas pasen. Busco desarrollarme en la evangelización de las prácticas ágiles, en el entrenamiento o coaching ágil y en acompañamiento de transformaciones ágiles. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades, dicto capacitaciones e influencio, como agente de cambio, en las organizaciones en las cuales estoy. Soy un apasionado de lo que hago y me gusta mejorar cada día.
 
 \sepspace
@@ -156,6 +156,7 @@ Me gusta desarrollar equipos ágiles de excelencia que apliquen prácticas de in
 %2003 - Systems Engineer: School of Exact Sciences, UNPA-UACO National University. Graduated in 2003.
 \EducationEntry{Ingeniero de Sistemas}{2003}{UNPA-UACO}
 {Universidad Nacional de la Patagonia Austral - Unidad Académica Caleta Olivia}
+La Ingeniería de Sistemas es un profesión con enfoque científico-técnico, interdisciplinario, organizacional y de pensamiento sistémico para la invención y utilización de técnicas dirigidas a la construcción, operación y mantenimiento de sistemas, incluyendo sistemas sociales empresariales, cibernéticos y sistemas hombre-máquina.
 \sepspace
 
 %2000, Analyst: University Analyst Programmer: School of Engineering, UNPSJB University National. Graduated in 2000.
@@ -173,8 +174,8 @@ Me gusta desarrollar equipos ágiles de excelencia que apliquen prácticas de in
 \NewPart{Experiencia laboral}{}
 
 %2014-2015 Globant (globant.com) Software Engineer.
-\WorkEntry{LATAM/Globant}{2015-2016 (actual)}{ScrumMaster Sr.}
-{ScrumMaster en un proyecto para aerolínea Latam contratado por Globant Company, con las siguientes responsabilidades principales:
+\WorkEntry{LATAM/Globant}{2015-2016 (actual)}{ScrumMaster Sr., Team Facilitator y Agile Coach de equipos}
+{Scrum Master en un proyecto para aerolínea Latam contratado por Globant Company, con las siguientes responsabilidades principales:
 \begin{itemize}
 \item Ayudar al equipo empleando las prácticas Agile para cumplir con los compromisos de los proyectos digitales.
 \item Construir un ambiente confiable y seguro para el equipo.
@@ -196,11 +197,11 @@ Me gusta desarrollar equipos ágiles de excelencia que apliquen prácticas de in
 \sepspace
 
 %2014-2015 Globant (globant.com) Software Engineer.
-\WorkEntry{Globant}{2015}{Technical Leader, Focal point y Scrum Master}
+\WorkEntry{Globant}{2015}{Technical Leader, Scrum Master, Team Facilitator}
 {
 \begin{itemize}
-\item Scrum Master de equipo tipo POD (con roles BA, QC y PM).
-\item Technical Lead en Perl/Java tecnologías para cuenta de LAN en empresa Globant. Las tecnologías usadas fueron: Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Los proyectos fueron  relacionados a recolección de datos para envío a Google Analytic, gestión de promosiones y gestión de canje preferente de pasajes y usuarios Lanpass.
+\item Scrum Master y Team Facilitator de equipos en LATAM Airlines.
+\item SM y Technical Lead en Perl/Java tecnologías para cuenta de LAN en empresa Globant. Las tecnologías usadas fueron: Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Los proyectos fueron  relacionados a recolección de datos para envío a Google Analytic, gestión de promosiones y gestión de canje preferente de pasajes y usuarios Lanpass.
 \item Focal point y Desarrollador Java en proyectos de cambio de pasajes con arquitectura SOA.
 \end{itemize}
 }
@@ -292,6 +293,12 @@ Desarrollador y Líder técnico en proyectos de desarrollo de software para empr
 Certified ScrumMaster por SCRUM ALLIANCE.\newline
 Licencia: 000428099\newline
 URL: \url{https://www.scrumalliance.org/community/profile/dpalminio}
+}
+\sepspace
+
+\CertificatesEntry{\large{\textbf{AMC}}}{}
+\CertificatesEntry{}{
+SCRUMstudy Agile Master Certified.\newline
 }
 \sepspace
 
