Update and Build pdf

--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -138,7 +138,7 @@
 \PersonalEntry{Mail}{\url{dario.palminio@gmail.com}}
 \PersonalEntry{Sitio web}{\url{https://www.linkedin.com/in/palminio}}
 \PersonalEntry{linkedin}{\url{https://www.linkedin.com/in/palminio}}
-\PersonalEntry{CScrumMaster}{\url{https://www.scrumalliance.org/community/profile/dpalminio}}
+
 
 %%% Work experience
 %%% ------------------------------------------------------------
@@ -191,6 +191,7 @@ La Ingeniería de Sistemas es un profesión con enfoque científico-técnico, in
 \item Colaborar con la gestión de riesgos, manejo de impedimentos y análisis de causa raíces.
 \item Ayudar en el camino de carrera y al crecimiento profesional y personal a los integrantes del equipo.
 \item Colaborar, reportar y ayudar a Agile Manegers a realizar actividades o desarrollos de soluciones transversales u organizacionales.
+\item Consultor, Agile Coaching y Team Facilitator para diferentes áreas dentro de la empresa Globant y LATAM.
 \end{itemize}
 }
 
@@ -330,6 +331,13 @@ URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certifica
 Scrum Certification for Java Developer por International Scrum Institute.\newline
 Licencia: 96122926946263\newline
 URL: \url{http://www.scrum-institute.org/International_Scrum_Institute_Certificate_Validation_Tool.php}
+}
+\sepspace
+
+\CertificatesEntry{\large{\textbf{Leading SAFe}}}{}
+\CertificatesEntry{}{
+Leading SAFe en curso.\newline
+
 }
 \sepspace
 
