Update and Build pdf

--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -144,7 +144,7 @@
 %%% ------------------------------------------------------------
 \NewPart{Sumario}{}
 
-Soy un Ingeniero de Sistemas y agilista con perfil de Agile Coach, Scrum Master Sr. y Team Facilitator. Las aptitudes con las que me desenvuelvo con dicho rol son: liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento. 
+Soy un Ingeniero de Sistemas y agilista con perfil de Consultor, Agile Coach, Scrum Master Sr. y Team Facilitator. Las aptitudes con las que me desenvuelvo con dicho rol son: liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento. 
 Me gusta desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal y en hacer que las cosas pasen. Busco desarrollarme en la evangelización de las prácticas ágiles, en el entrenamiento o coaching ágil y en acompañamiento de transformaciones ágiles. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades, dicto capacitaciones e influencio, como agente de cambio, en las organizaciones en las cuales estoy. Soy un apasionado de lo que hago y me gusta mejorar cada día.
 
 \sepspace
@@ -174,7 +174,7 @@ La Ingeniería de Sistemas es un profesión con enfoque científico-técnico, in
 \NewPart{Experiencia laboral}{}
 
 %2014-2015 Globant (globant.com) Software Engineer.
-\WorkEntry{LATAM/Globant}{2015-2016 (actual)}{ScrumMaster Sr., Team Facilitator y Agile Coach de equipos}
+\WorkEntry{LATAM Airlines/Globant}{2015-2017 (actual)}{ScrumMaster Sr., Team Facilitator y Agile Coach de equipos}
 {Scrum Master en un proyecto para aerolínea Latam contratado por Globant Company, con las siguientes responsabilidades principales:
 \begin{itemize}
 \item Ayudar al equipo empleando las prácticas Agile para cumplir con los compromisos de los proyectos digitales.
@@ -202,7 +202,7 @@ La Ingeniería de Sistemas es un profesión con enfoque científico-técnico, in
 {
 \begin{itemize}
 \item Scrum Master y Team Facilitator de equipos en LATAM Airlines.
-\item SM y Technical Lead en Perl/Java tecnologías para cuenta de LAN en empresa Globant. Las tecnologías usadas fueron: Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Los proyectos fueron  relacionados a recolección de datos para envío a Google Analytic, gestión de promosiones y gestión de canje preferente de pasajes y usuarios Lanpass.
+\item Scrum Master y Technical Lead en Perl/Java tecnologías para cuenta de LAN en empresa Globant. Las tecnologías usadas fueron: Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Los proyectos fueron  relacionados a recolección de datos para envío a Google Analytic, gestión de promosiones y gestión de canje preferente de pasajes y usuarios Lanpass.
 \item Focal point y Desarrollador Java en proyectos de cambio de pasajes con arquitectura SOA.
 \end{itemize}
 }
