--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -136,7 +136,7 @@
 \PersonalEntry{Localización}{Santiago de Chile}
 \PersonalEntry{Teléfono}{(56) 979513358}
 \PersonalEntry{Mail}{\url{dario.palminio@gmail.com}}
-\PersonalEntry{Sitio web}{\url{https://www.linkedin.com/in/palminio}}
+%%% \PersonalEntry{Sitio web}{\url{https://www.linkedin.com/in/palminio}}
 \PersonalEntry{linkedin}{\url{https://www.linkedin.com/in/palminio}}
 
 
@@ -144,7 +144,7 @@
 %%% ------------------------------------------------------------
 \NewPart{Sumario}{}
 
-Soy un Ingeniero de Sistemas y agilista con perfil de Consultor, Agile Coach, Scrum Master Sr. y Team Facilitator. Las aptitudes con las que me desenvuelvo con dicho rol son: liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento. 
+Soy un Ingeniero de Sistemas y agilista con perfil de Consultor, Agile Coach, Scrum Master Sr. y Team Facilitator. Las aptitudes con las que me desenvuelvo con dicho rol son: pensador sistémico, liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento. 
 Me gusta desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal y en hacer que las cosas pasen. Busco desarrollarme en la evangelización de las prácticas ágiles, en el entrenamiento o coaching ágil y en acompañamiento de transformaciones ágiles. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades, dicto capacitaciones e influencio, como agente de cambio, en las organizaciones en las cuales estoy. Soy un apasionado de lo que hago y me gusta mejorar cada día.
 
 \sepspace
@@ -173,9 +173,16 @@ La Ingeniería de Sistemas es un profesión con enfoque científico-técnico, in
 %%% ------------------------------------------------------------
 \NewPart{Experiencia laboral}{}
 
+%2013-2014 Make IT Coop. As Associate, Secretary
+\WorkEntry{Cencosud (Globant contractor)}{Nov. 2017}{Agile Coach, Digital Transformation Advisor}{
+Agile Coach en Transformación Digital del conglomerados de retail en América Latina Cencosud. Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile).
+}
+
+\sepspace
+
 %2014-2015 Globant (globant.com) Software Engineer.
-\WorkEntry{LATAM Airlines/Globant}{2015-2017 (actual)}{ScrumMaster Sr., Team Facilitator y Agile Coach de equipos}
-{Scrum Master en un proyecto para aerolínea Latam contratado por Globant Company, con las siguientes responsabilidades principales:
+\WorkEntry{LATAM Airlines (Globant contractor)}{2015 - Oct. 2017}{ScrumMaster Sr., Team Facilitator y Agile Coach de equipos}
+{Scrum Master en un proyecto para aerolínea LATAM Airlines contratado por Globant Company, trabajando en las oficinas de LATAM, con las siguientes responsabilidades principales:
 \begin{itemize}
 \item Ayudar al equipo empleando las prácticas Agile para cumplir con los compromisos de los proyectos digitales.
 \item Construir un ambiente confiable y seguro para el equipo.
@@ -201,7 +208,7 @@ La Ingeniería de Sistemas es un profesión con enfoque científico-técnico, in
 \WorkEntry{Globant}{2015}{Technical Leader, Scrum Master, Team Facilitator}
 {
 \begin{itemize}
-\item Scrum Master y Team Facilitator de equipos en LATAM Airlines.
+\item Scrum Master y Team Facilitator de equipos en LAN Airlines trabajando en las oficinas de Globant Company.
 \item Scrum Master y Technical Lead en Perl/Java tecnologías para cuenta de LAN en empresa Globant. Las tecnologías usadas fueron: Perl (POO with Moose, cgi, Test::Moore, Template Toolkit), MySQL, Linux, SVN, Git-Svn, CSS3, HTML5, Eclipse (RSE, EPIC), Review Board, Jenkins, etc. The Java Technologies used was SOAP, RESTful/RESTEasy, Spring, Maven, Javascript with front-end using MVC (Backbone.js). Los proyectos fueron  relacionados a recolección de datos para envío a Google Analytic, gestión de promosiones y gestión de canje preferente de pasajes y usuarios Lanpass.
 \item Focal point y Desarrollador Java en proyectos de cambio de pasajes con arquitectura SOA.
 \end{itemize}
