Add cencosud experience

--- a/palminio_cv_en.tex
+++ b/palminio_cv_en.tex
@@ -168,9 +168,16 @@ I'm a Systems Engineer graduated at the “National University of Southern Patag
 %%% ------------------------------------------------------------
 \NewPart{Work experience}{}
 
-%2014-2015 Globant (globant.com) Software Engineer.
-\WorkEntry{Globant/Latam}{2015-present}{ScrumMaster}
-{Scrum Master in a context of Latam (LAN) airline at Globant Company.}
+%2017 Cencosud Agile Coach
+\WorkEntry{Cencosud (Globant contractor)}{Nov. 2017}{Agile Coach, Digital Transformation Advisor}{
+Agile Coach en Transformación Digital del conglomerados de retail en América Latina Cencosud. Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile).
+}
+
+\sepspace
+
+%2015 Globant Latam (globant.com) Software Engineer.
+\WorkEntry{LATAM Airlines (Globant contractor)}{2015}{ScrumMaster}
+{Scrum Master Sr. and Team Facilitator in a context of Latam (LAN) airline at Globant Company.}
 \sepspace
 
 %2014-2015 Globant (globant.com) Software Engineer.
