--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -173,7 +173,7 @@ La Ingeniería de Sistemas es un profesión con enfoque científico-técnico, in
 %%% ------------------------------------------------------------
 \NewPart{Experiencia laboral}{}
 
-%2013-2014 Make IT Coop. As Associate, Secretary
+%2017 Cencosud Agile Coach
 \WorkEntry{Cencosud (Globant contractor)}{Nov. 2017}{Agile Coach, Digital Transformation Advisor}{
 Agile Coach en Transformación Digital del conglomerados de retail en América Latina Cencosud. Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile).
 }
