--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -139,8 +139,7 @@
 %%% \PersonalEntry{Sitio web}{\url{https://www.linkedin.com/in/palminio}}
 \PersonalEntry{linkedin}{\url{https://www.linkedin.com/in/palminio}}
 
-
-%%% Work experience
+%%% summary
 %%% ------------------------------------------------------------
 \NewPart{Sumario}{}
 
@@ -173,8 +172,18 @@ La Ingeniería de Sistemas es un profesión con enfoque científico-técnico, in
 %%% ------------------------------------------------------------
 \NewPart{Experiencia laboral}{}
 
-%2017 Cencosud Agile Coach
-\WorkEntry{Cencosud (Globant contractor)}{Nov. 2017}{Agile Coach, Digital Transformation Advisor}{
+%2018 Cencosud Agile Coach by Balancing Loop Consulting SpA
+\WorkEntry{Cencosud (Balancing Loop contractor)}{Feb. 2018}{Agile Coach, Digital Transformation Advisor}{
+Agile Coach y Digital Transformation Advisor en Transformación Digital del conglomerados de retail en América Latina Cencosud. Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile).
+}
+
+%2018 Fundador de Balancing Loop Consulting SpA
+\WorkEntry{Balancing Loop}{Feb. 2018}{Emprendedor}{
+Emprendedor y Fundador de Balancing Loop Consulting SpA (http://www.balancing-loop.com/) una empresa de consultoría y Agile Coaching.
+}
+
+%2017 Cencosud Agile Coach by Globant
+\WorkEntry{Cencosud (Globant contractor)}{Nov. 2017}{Agile Coach}{
 Agile Coach en Transformación Digital del conglomerados de retail en América Latina Cencosud. Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile).
 }
 
