--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -185,6 +185,11 @@ Emprendedor y Fundador de Balancing Loop Consulting SpA (http://www.balancing-lo
 %2017 Cencosud Agile Coach by Globant
 \WorkEntry{Cencosud (Globant contractor)}{Nov. 2017}{Agile Coach}{
 Agile Coach en Transformación Digital del conglomerados de retail en América Latina Cencosud. Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile).
+\begin{itemize}
+\item Evaluación y acompañamiento en madurez de equipos ágiles.
+\item Acompañamiento en el proceso de transformación Digital.
+\item Capacitación de Equipos y Product Owners.
+\end{itemize}
 }
 
 \sepspace
