--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -118,7 +118,7 @@
 %%% Photo
 \begin{figure}
 	\hfill
-	\includegraphics[width=0.2\textwidth]{photo2}
+	\includegraphics[width=0.2\textwidth]{photo1}
 	\vspace{-7cm}
 \end{figure}
 
@@ -143,8 +143,9 @@
 %%% ------------------------------------------------------------
 \NewPart{Sumario}{}
 
-Soy un Ingeniero de Sistemas y agilista con perfil de Consultor, Agile Coach, Scrum Master Sr. y Team Facilitator. Las aptitudes con las que me desenvuelvo con dicho rol son: pensador sistémico, liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento. 
-Me gusta desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal y en hacer que las cosas pasen. Busco desarrollarme en la evangelización de las prácticas ágiles, en el entrenamiento o coaching ágil y en acompañamiento de transformaciones ágiles. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades, dicto capacitaciones e influencio, como agente de cambio, en las organizaciones en las cuales estoy. Soy un apasionado de lo que hago y me gusta mejorar cada día.
+Soy un Ingeniero de Sistemas y Agility Enabler con experiencia como Consultor, Agile Coach, Digital Transformation Advisor, Scrum Master Sr., Team Facilitator e Ingeniería de Software. Las aptitudes con las que me desenvuelvo son: pensador sistémico, liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento.
+Me gusta ayudar con cambios organizacionales, habilitar agilidad en las organizaciones y desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal profesional y en hacer que las cosas pasen. Busco desarrollarme en la evangelización de las prácticas ágiles, en el entrenamiento o coaching ágil y en acompañamiento de transformaciones organizacionales. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades, dicto capacitaciones e influencio, como agente de cambio, en las organizaciones en las cuales estoy. Soy un apasionado de lo que hago y me gusta mejorar cada día.
+
 
 \sepspace
 
@@ -174,12 +175,12 @@ La Ingeniería de Sistemas es un profesión con enfoque científico-técnico, in
 
 %2018 Cencosud Agile Coach by Balancing Loop Consulting SpA
 \WorkEntry{Cencosud (Balancing Loop contractor)}{Feb. 2018}{Agile Coach, Digital Transformation Advisor}{
-Agile Coach y Digital Transformation Advisor en Transformación Digital del conglomerados de retail en América Latina Cencosud. Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile).
+Agile Coach y Digital Transformation Advisor en Transformación Digital del conglomerados de retail en América Latina Cencosud. Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile). Buscamos la reinvención de la organización, una nueva forma de ser y hacer, que involucra un cambio cultural, estratégico y tecnológico; con el objetivo de generar una manera de generar propuestas de valor que satisfagan y desafíen la experiencia de usuario de los clientes de Cencosud.
 }
 
 %2018 Fundador de Balancing Loop Consulting SpA
 \WorkEntry{Balancing Loop}{Feb. 2018}{Emprendedor}{
-Emprendedor y Fundador de Balancing Loop Consulting SpA (http://www.balancing-loop.com/) una empresa de consultoría y Agile Coaching.
+Emprendedor y Fundador de Balancing Loop Consulting SpA (http://www.balancing-loop.com/) una empresa de consultoría y habilitación de agilidad organizacional.
 }
 
 %2017 Cencosud Agile Coach by Globant
@@ -387,9 +388,7 @@ Leading SAFe en curso.\newline
 
 \sepspace
 
-\SkillsEntry{Software}{
-\textsc{Java}, \LaTeX, \textsc{Perl}, \textsc{MySQL}, etc.
-}
+
 
 
 %%% References
