--- a/palminio_cv_es.tex
+++ b/palminio_cv_es.tex
@@ -36,6 +36,7 @@
 \usepackage{geometry}
 	\textheight=700px                    % Saving trees ;-)
 \usepackage{url}
+\usepackage{hyperref}
 
 \frenchspacing              % Better looking spacings after periods
 \pagestyle{empty}           % No pagenumbers/headers/footers
@@ -123,7 +124,7 @@
 \end{figure}
 
 %%% Title
-\MyName{Dario Palminio}
+\MyName{Dario Andrés Palminio}
 \MySlogan{Curriculum Vitae}
 
 \sepspace
@@ -132,19 +133,21 @@
 %%% ------------------------------------------------------------
 \NewPart{Datos personales}{}
 
-\PersonalEntry{Nacimiento}{6 de Enero de 1977}
+\PersonalEntry{Nacimiento}{6 de Enero de 1977 en Rosario (Argentina)}
+\PersonalEntry{Nacionalidad}{Argentino y Chileno nacionalizado}
 \PersonalEntry{Localización}{Santiago de Chile}
 \PersonalEntry{Teléfono}{(56) 979513358}
-\PersonalEntry{Mail}{\url{dario.palminio@gmail.com}}
-%%% \PersonalEntry{Sitio web}{\url{https://www.linkedin.com/in/palminio}}
+\PersonalEntry{Mail}{\url{dario.palminio  @  gmail.com}}
 \PersonalEntry{linkedin}{\url{https://www.linkedin.com/in/palminio}}
+\PersonalEntry{Sitio web}{\url{https://www.balancing-loop.com}}
 
 %%% summary
 %%% ------------------------------------------------------------
 \NewPart{Sumario}{}
 
 Soy un Ingeniero de Sistemas y Agility Enabler con experiencia como Consultor, Agile Coach, Digital Transformation Advisor, Scrum Master Sr., Team Facilitator e Ingeniería de Software. Las aptitudes con las que me desenvuelvo son: pensador sistémico, liderazgo servicial, resiliente y mejorador, facilitador, comunicativo y sociable, conciencia situacional, asertivo, transparente, mediador y resolutor de conflictos, entusiasta, proactivo y con actitud de empoderamiento.
-Me gusta ayudar con cambios organizacionales, habilitar agilidad en las organizaciones y desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal profesional y en hacer que las cosas pasen. Busco desarrollarme en la evangelización de las prácticas ágiles, en el entrenamiento o coaching ágil y en acompañamiento de transformaciones organizacionales. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades, dicto capacitaciones e influencio, como agente de cambio, en las organizaciones en las cuales estoy. Soy un apasionado de lo que hago y me gusta mejorar cada día.
+Me gusta ayudar con cambios organizacionales, habilitar agilidad en las organizaciones y desarrollar equipos ágiles de excelencia que apliquen prácticas de ingeniería de software. También me llevo bien con la idea de ser un despertador servicial, que influencia en los cambios culturales, desarrollo personal profesional y en hacer que las cosas pasen. Busco desarrollarme en la divulgación, entrenamiento y habilitación de las prácticas ágiles, en Agile Coaching, Ingeniería del Sistema Organizacional y en acompañamiento de transformaciones organizacionales. En esta vía he escrito un libro ("Scrum en ingeniería de software"), mantengo blogs (http://agilismoeningenieriadesoftware.blogspot.cl), participo en comunidades, dicto capacitaciones e influencio, como agente de cambio, en las organizaciones en las cuales me desenvuelvo. Soy un apasionado de lo que hago y me gusta mejorar cada día.
+
 
 
 \sepspace
@@ -156,17 +159,22 @@ Me gusta ayudar con cambios organizacionales, habilitar agilidad en las organiza
 %2003 - Systems Engineer: School of Exact Sciences, UNPA-UACO National University. Graduated in 2003.
 \EducationEntry{Ingeniero de Sistemas}{2003}{UNPA-UACO}
 {Universidad Nacional de la Patagonia Austral - Unidad Académica Caleta Olivia}
-La Ingeniería de Sistemas es un profesión con enfoque científico-técnico, interdisciplinario, organizacional y de pensamiento sistémico para la invención y utilización de técnicas dirigidas a la construcción, operación y mantenimiento de sistemas, incluyendo sistemas sociales empresariales, cibernéticos y sistemas hombre-máquina.
+
+Estudié Ingeniería de Sistemas (en UNPA-UACO de Argentina, Santa Cruz) por ser una disciplina amplia que incluye a ingeniería de software y la gestión organizacional. Esta profesión tiene un enfoque científico-técnico, interdisciplinario, organizacional y de pensamiento sistémico para la invención y utilización de técnicas dirigidas a la construcción, operación y mantenimiento de sistemas, incluyendo sistemas sociales empresariales, cibernéticos y sistemas hombre-máquina.
 \sepspace
 
 %2000, Analyst: University Analyst Programmer: School of Engineering, UNPSJB University National. Graduated in 2000.
 \EducationEntry{Analista de Sistemas}{2000}{UNPSJB}
 {University National de la Patagonia San Juan Bosco}
+
+Antes de ser ingeniero, estudié Analista de Sistemas (en UNPSJB de Argentina, Chubut) por ser una especialización técnica que provee la capacidad de abstracción y de análisis de sistemas, incluyendo software, sistemas de información y dominio de problemas organizacionales. 
 \sepspace
 
 %1995, Electromechanical: Electromechanical technician: School ENET 1. Graduated in 1995.
 \EducationEntry{Electromecánico}{1995}{ENET 1}
 {Técnico mecánico eletricista}
+
+Hice mi formación secundaria, de nivel medio, en una escuela de educación técnica (en ENET de Argentina, Chubut) donde me recibí de Electromecánico, una combinación de electricista, electrónico y mecánico. Esto me dio una base científico-técnica útil para abordar problemas desde una perspectiva científica y técnica.
 \sepspace
 
 %%% Work experience
@@ -175,7 +183,7 @@ La Ingeniería de Sistemas es un profesión con enfoque científico-técnico, in
 
 %2018 Cencosud Agile Coach by Balancing Loop Consulting SpA
 \WorkEntry{Cencosud (Balancing Loop contractor)}{Feb. 2018}{Agile Coach, Digital Transformation Advisor}{
-Agile Coach y Digital Transformation Advisor en Transformación Digital del conglomerados de retail en América Latina Cencosud. Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile). Buscamos la reinvención de la organización, una nueva forma de ser y hacer, que involucra un cambio cultural, estratégico y tecnológico; con el objetivo de generar una manera de generar propuestas de valor que satisfagan y desafíen la experiencia de usuario de los clientes de Cencosud.
+Agile Coach y Digital Transformation Advisor en Transformación Digital del conglomerados de retail en América Latina Cencosud (como consultor y proveedor independiente). Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile). Buscamos la reinvención de la organización, una nueva forma de ser y hacer, que involucra un cambio cultural, estratégico y tecnológico; con el objetivo de habilitar la agilidad y una manera de generar propuestas de valor que satisfagan y desafíen la experiencia de usuario de los clientes de Cencosud.
 }
 
 %2018 Fundador de Balancing Loop Consulting SpA
@@ -185,7 +193,7 @@ Emprendedor y Fundador de Balancing Loop Consulting SpA (http://www.balancing-lo
 
 %2017 Cencosud Agile Coach by Globant
 \WorkEntry{Cencosud (Globant contractor)}{Nov. 2017}{Agile Coach}{
-Agile Coach en Transformación Digital del conglomerados de retail en América Latina Cencosud. Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile).
+Agile Coach en Transformación Digital del conglomerados de retail en América Latina Cencosud (como consultor de Globant). Trabajando en el equipo de transformación digital en las oficinas de Cencosud (Santiago de Chile).
 \begin{itemize}
 \item Evaluación y acompañamiento en madurez de equipos ágiles.
 \item Acompañamiento en el proceso de transformación Digital.
@@ -213,8 +221,9 @@ Agile Coach en Transformación Digital del conglomerados de retail en América L
 \item Colaborar con la gestión de riesgos, manejo de impedimentos y análisis de causa raíces.
 \item Ayudar en el camino de carrera y al crecimiento profesional y personal a los integrantes del equipo.
 \item Colaborar, reportar y ayudar a Agile Manegers a realizar actividades o desarrollos de soluciones transversales u organizacionales.
-\item Consultor, Agile Coaching y Team Facilitator para diferentes áreas dentro de la empresa Globant y LATAM.
 \end{itemize}
+
+Los últimos meses estuve ejerciendo como Consultor, Agile Coaching y Team Facilitator para diferentes áreas dentro de la empresa Globant y LATAM.
 }
 
 \sepspace
@@ -233,37 +242,38 @@ Agile Coach en Transformación Digital del conglomerados de retail en América L
 
 %2012-2014 IBA Entertainment limited as Software Engineer Freelancer.
 \WorkEntry{IBA Entertainment limited}{2012-2014}{Software Engineer Freelancer}
-{Ingeniero de Software (como Freelancer/Monotributista) en tecnologías Perl para sistema de sportsbetting (Bet3000.com). Algunas tecnologías usadas: Perl 5, EmbPerl Object, Object Perl, JSON, RESTful, Mojolicious, Perl DBI. Desarrollo en el proyecto Bet3000 (www.bet3000.com) para la empresa International Betting Association.}
+{Trabajé en modalidad Freelancer (Monotributista) como Ingeniero de Software, bajo el marco de trabajo eXtreme Programming, para sistema de sportsbetting (Sitio Bet3000.com). Algunas tecnologías usadas: Perl 5, EmbPerl Object, Object Perl, JSON, RESTful, Mojolicious, Perl DBI. Desarrollo en el proyecto Bet3000 (www.bet3000.com) para la empresa International Betting Association.}
 
 \sepspace
 
 %2013-2014 Make IT Coop. As Associate, Secretary
 \WorkEntry{Make IT Coop.}{2013-2014}{Associate, Secretary}{
-Socio fundador y Secretario en Cooperativa Make IT Coop. También desarrollo en diferentes tecnologías web.}
+Fui Socio fundador y Secretario en una Empresa Cooperativa llamada Make IT Coop. Este fue un emprendimiento colaborativo, iniciado en la ciudad de Córdoba (Argentina), con el objetivo de desarrollar software en diferentes tecnologías web y prestar servicio de consultoría informática.
+}
 
 \sepspace
 
 %2008-2010 Motorola Mobility as Software Engineer.
 \WorkEntry{Motorola Mobility}{2008-2010}{Software Engineer}
-{Ingeniero de Software en desarrollos Java (J2EE para dispositivos móviles y sistema de telecomunicaciones) en Motorola Mobility de Argentina S.A.}
+{Fui Ingeniero de Software en Motorola Mobility de Argentina S.A. (Córdoba, Arg.) en proyectos tipo PMI y otros bajo el marco de trabajo eXtreme Programming. Desarrollos aplicaciones Java (J2EE para dispositivos móviles para sistema de telecomunicaciones)}
 
 \sepspace
 
 %2008-2010 Motorola S.C.A (Contractor Vates) as Software Engineer.
 \WorkEntry{Motorola S.C.A (Contractor Vates)}{2008-2010}{Software Engineer}
-{Desarrollador Java (J2SE and J2EE para dispositivos móviles y sistema de telecomunicaciones)}
+{Fui desarrollador Java (J2SE and J2EE para dispositivos móviles y sistema de telecomunicaciones) contratado por Vates para trabajar en las oficinas de Motorola.}
 
 \sepspace
 
 %2008 Vates (www.vates.com) as Systems Engineer.
 \WorkEntry{Vates}{2008}{Systems Engineer}
-{Desarrollador Java para sistema de Gestión de Compras Municipal.}
+{Trabajé en Vates como desarrollador Java para sistema de Gestión de Compras Municipal (Mendoza).}
 
 \sepspace
 
 %2007 Santex America S.A. (santexgroup.com) as Software Engineer: Java Developer.
 \WorkEntry{Santex America S.A.}{2007}{Software Engineer, Java Developer}
-{1) Desarrollador Java para sistema de Gestión de Procesos de Negocio.}
+{Trabaje en un proyecto de desarrollo de una aplicación Java para "Sistema de Gestión de Procesos de Negocio" bajo el marco de certificación CMMI nivel 2.}
 
 \sepspace
 
@@ -278,19 +288,20 @@ Socio fundador y Secretario en Cooperativa Make IT Coop. También desarrollo en 
 
 %2006 Informatic forensics – Tribunal third in Comodoro Rivadavia City: Informatic Forensics.
 \WorkEntry{Tribunal tercero de Comodoro Rivadavia}{2006}{Informático Forense}{
-Informático Forense para el tribunal tercero de Comodoro Rivadavia}
+Ejercí como Informático Forense para el tribunal tercero de Comodoro Rivadavia (Argentina. Chubut).}
 
 \sepspace
 
 %2004-2006 24 months in Municipality of Comodoro Rivadavia city, Systems Engineer Juridical Informatics, Technical Leader.
 \WorkEntry{Municipalidad de Comodoro Rivadavia}{2004-2006}{Systems Engineer Juridical Informatics, Technical Leader}
-{Líder Técnico en Proyecto de Digesto Legislativo Municipal en Asesoría letrada de la Municipalidad de Comodoro Rivadavia.}
+{Fui Líder Técnico en Proyecto del “Digesto Legislativo Municipal” en Asesoría letrada de la Municipalidad de Comodoro Rivadavia. El proyecto lo desarrollamos con un equipo compuesto por una abogada, un conjunto de informáticos y yo; y constaba de crear una compilación digital ordenada de normas jurídicas (ordenanzas, resoluciones, decretos reglamentarios, etc.) de la municipalidad dictadas por intendencia y el Concejo Deliberante de la ciudad.
+}
 
 \sepspace
 
 %2004-2005 Teacher Mathematic Teacher, Software Teacher, Computation Teacher.
 \WorkEntry{Profesor}{2004-2005}{Teacher Mathematic Teacher, Software Teacher, Computation Teacher}
-{Profesor: 
+{He ejercido como Profesor en escuelas pçublicas y privadas de Argentina. Las materias que impartí fueron las siguientes: 
 1- Computación I (Basic Informatic) - ISIS (Instituto terciario privado); 
 2- Computación II (Aplicaciones de Software) - ISIS (Instituto terciario privado); 
 3- Computación III (Linux y Windows Net) - ISIS (Instituto terciario privado); 
@@ -303,13 +314,16 @@ Informático Forense para el tribunal tercero de Comodoro Rivadavia}
 
 %2000-2003 - DeSoft Development of Software
 \WorkEntry{DeSoft}{2000-2003}{Developer, Technical Leader}{
-Desarrollador y Líder técnico en proyectos de desarrollo de software para empresas de terserización petrolera y máquinas viales.}
+Trabajé como cofundador y asociado en un emprendimiento PYME de desarrollo de software. Me desenvolví como Analista, Desarrollador y Líder técnico en proyectos de desarrollo de software para empresas de terserización petrolera y máquinas viales (de la Patagonia Argentina).}
 
 \sepspace
 
 %%% Certifications
 %%% ------------------------------------------------------------
 \NewPart{Certificaciones}{}
+
+Pienso que la profesión una la conduce, la mejora y fortalece, principalmente con la experiencia práctica, no con certificaciones. Las certificaciones constituyen una manera de capacitación que ayuda a entrar en un tema en particular. En esta vía he desarrollado algunas certificaciones:
+\sepspace
 
 \CertificatesEntry{\large{\textbf{ScrumMaster}}}{}
 \CertificatesEntry{}{
@@ -367,6 +381,9 @@ Leading SAFe en curso.\newline
 %%% ------------------------------------------------------------
 \NewPart{Cursos de Gestión y Organización}{}
 
+Para mejorar día a día, además de la experiencia en campo, soy autodidacta, por lo que leo bastante y estudio en forma independiente. A su vez he realizado diferentes capacitaciones y diplomados de los cuales doy cuenta de algunos a continuación:
+\sepspace
+
 \CoursesEntry{Gestión Ágil de Proyectos (PMI-ACP)}{2017}{Present License CER-R5LNG3F3-210777}{}
 \CoursesEntry{Curso de Certified Scrum Master}{2015}{Kleer, Cba.-Arg.}{}
 \CoursesEntry{Scrum Leader}{2015}{ValueInnova, Cba.-Arg.}{}
@@ -383,6 +400,22 @@ Leading SAFe en curso.\newline
 
 \sepspace
 
+\SkillsEntry{\textbf{Métodos}}{Métodos y marcos de trabajo como: Marco Scrum (Scrum.or), Método Kanban, Scrumban, Lean Startup.
+}
+\sepspace
+
+\SkillsEntry{\textbf{Framework}}{Frameworks de escalamiento como: Scaled Agile Framework (SAFe for Lean Enterprises), LeSS Framework (Large Scale Scrum, LeSS), Disciplined Agile Framework  (DAD), Nexus, Scrum@Scale (Scrum.or).
+}
+\sepspace
+
+\SkillsEntry{\textbf{Change Mgmt.}}{Métodos de gestión del cambio como: Change Management 3.0 (J. Appelo), Leading Change (J. Kotter), Retional Model (R. Ackoff), PDCA Model y SoPK (E. Deming), ADKAR Model (PROSCI), Toyota Kata y Kanban System.).
+}
+\sepspace
+
+\SkillsEntry{\textbf{Management}}{Teorías de gestión: Management 2.0, Systemic Management y Management 3.0 (J. Appelo).).
+}
+\sepspace
+
 \SkillsEntry{\textbf{Languages}}{Spanish (mother tongue)}
 \SkillsEntry{}{English (level 2)}
 
@@ -395,7 +428,7 @@ Leading SAFe en curso.\newline
 %%% ------------------------------------------------------------
 \NewPart{Referencias}{}
 Para más información ver el prefil en linkedin.
-
+Última fecha de actualización: 21 de Octubre de 2018.
 \sepspace
 
 \end{document}
